fixed spacing, fixed border for footer on mobile

--- a/blog/_global/css/style.less
+++ b/blog/_global/css/style.less
@@ -143,6 +143,7 @@ article{
 
 footer{
 	background: #fff;
+	border-top: 1px solid #e0e0e0;
 	padding: 10px 0;
 	text-align:center;
 	font-family: "proxima-nova", sans-serif;
@@ -183,6 +184,9 @@ footer{
 	#body{
 		max-width:92%;
 		padding: 10px 50px;
+	}
+	footer{
+		border: none;
 	}
 }
 
